--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "postcss": "^8.1.2",
+    "postcss-cli": "^8.1.0",
+    "tailwindcss": "^1.9.4",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
